added logs, fixed endpoints
